apps/authentik/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  selector:
    app.kubernetes.io/name: authentik-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
