apps/authentik/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-group: tailscale-ingress-proxy-group
spec:
  defaultBackend:
    service:
      name: authentik-server
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - authentik
