apps/authentik/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: authentik
  hostnames:
    - sso.tomerhanochi.com
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
